# AICaddyVoiceAgent

./: .env.example  .gitattributes  .gitignore  README.md  package-lock.json  package.json  project-spec.md
.cursor/rules/: mobile-first-ui.mdc  project-structure.mdc
agent/: .dockerignore  .env.example  Dockerfile  Dockerfile.fly  Dockerfile.guide  docker-compose.guide.yml  fly-entrypoint.sh  fly.guide.toml  fly.toml  pyproject.toml  requirements.txt
agent/src/: agent.py  caddy_agent.py  course_guide.py  golf_course_api_errors.py  golf_course_api_schema.py  guide_common.py  guide_ensure.py  guide_service_app.py  rag.py  tools.py
agent/src/aicaddy/: __init__.py  paths.py
agent/src/aicaddy/guide/: __init__.py  api_schema.py  common.py  course_guide.py  ensure.py  prompts.py  service_app.py
agent/src/aicaddy/voice/: __init__.py  caddy_agent.py  main.py  rag.py  tools.py
frontend/: api-server.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/api/: ensure-guide.ts  nearby-courses.ts  token.ts  vercel-types.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CallView.tsx  ClubYardagesForm.tsx  CourseSelect.tsx  GuidePrepLoading.tsx  HomeDashboard.tsx  IntakeForm.tsx  LiveTranscript.tsx  PreCallView.tsx  ProfilePanel.tsx  UserProfileHome.tsx
frontend/src/lib/: caddyProfile.ts
frontend/src/types/: userProfile.ts
