[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-caddy-agent"
version = "1.0.0"
description = "AI Golf Caddy voice agent with RAG, built with LiveKit Agents for Python"
requires-python = ">=3.10, <3.15"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
    "llama-index>=0.10",
    "llama-index-embeddings-openai",
    "llama-index-vector-stores-chroma",
    "chromadb>=0.4",
    "pypdf>=3.0",
    "openai>=1.0",
    "httpx>=0.25",
    "fpdf2>=2.7",
    "livekit-plugins-openai>=1.5",
    "livekit-plugins-deepgram>=1.5",
    "livekit-plugins-cartesia>=1.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
